--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!-- style css
         ============================================ -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
 
         <!-- responsive css
         ============================================ -->
