--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- favicon.ico -->
-        <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="shortcut icon" type="./x-icon" href="./favicon.ico">
 
         <!-- ============== All CSS ================ -->
         <!-- normalize css
@@ -42,7 +42,7 @@
 
         <!-- change-text css
         ============================================ -->
-        <link rel="stylesheet" href="css/change-text.css">
+        <link rel="stylesheet" href="./change-text.css">
 
         <!-- YTPlayer css
         ============================================ -->
@@ -54,9 +54,9 @@
 
         <!-- owl.carousel css
         ============================================ -->
-        <link rel="stylesheet" href="css/owl.carousel.css">
-        <link rel="stylesheet" href="css/owl.theme.css">
-        <link rel="stylesheet" href="css/owl.transitions.css">
+        <link rel="stylesheet" href="./owl.carousel.css">
+        <link rel="stylesheet" href="./owl.theme.css">
+        <link rel="stylesheet" href="./owl.transitions.css">
 
         <!-- nivo-slider css
         ============================================ -->
